--- a/application/src/templates/base.html
+++ b/application/src/templates/base.html
@@ -15,8 +15,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', path='../static/icons/favicon.ico')}}" />
     <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css')}}" type="text/css" />
+
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -24,10 +24,10 @@
 
 
   <body>
-    <main class="d-flex justify-content-center align-items-center h-100">
-      <div class="container-fluid col-5 py-5 container border border-primary border-2" id="container">
+    <main class="d-flex justify-content-center align-items-center">
+      <div class="container-fluid col-6 py-5 border border-1" id="container">
         <div id="container-content">
-          {% block body %}{% endblock %}
+            {% block body %}{% endblock %}
         </div>
       </div>
     </main>
